----------
v3.2.0-git
----------

[jan] Make shares table compatible with Oracle.
[mms] Validate e-mail addresses on the forward and vacation pages (Request
      #7249).
[mms] Add 'newEmailFilter' API link.


------
v3.1.4
------

[jan] Fix behavior of 'utf' parameter (Bug #12937).
[mms] Fix sieve driver correctly identifying mailing lists when determining
      whether to send vacation messages
      (skhorde@smail.inf.fg-bonn-rhein-sieg.de, Bug #12938).


------
v3.1.3
------

[mms] SECURITY: Protect against CSRF attacks by using tokens on destructive
      actions (Bug #12796; CVE-2013-6275; found by Marcela Benetrix
      <m.benetrix@e-secure.com.au>).


------
v3.1.2
------

[mms] Disable links if the underlying preferences are locked.
[jan] Fix setting excluded addresses and mailing list flag in Sieve vacation
      rule.


------
v3.1.1
------

[jan] Fix option to filter by user-defined headers (Bug #12345).
[jan] Fix highlighting of menu entries.
[jan] Restore compatibility with PHP 5.3 (Bug #12306).


------
v3.1.0
------

[mjr] Fix fatal error when updating filters.


---------
v3.1.0RC1
---------

[mms] Fix regression in accessing Ingo links from the external API (Bug
      #12249).


-----------
v3.1.0beta1
-----------

[jan] Add composite script backends.
[jan] Add vacation driver for ISPConfig (Michael Bunk
      <mb@computer-leipzig.com>).
[jan] Hide unsupported form fields of vacation form (Michael Bunk
      <mb@computer-leipzig.com>).
[jan] Add composite transport backends.
[jan] Move shared ruleset selection to sidebar.
[mms] All Ingo templates now use Horde_View.


------
v3.0.4
------

[mms] SECURITY: Fix XSS vulnerability on smartmobile rule page (João Machado
      <geral@jpaulo.eu>).
[mms] Fix copy/move actions when destination mailbox contains non ASCII
      characters (Bug #12217).
[mms] Translate rule descriptions to the local language in UI.
[jan] Allow multiple addresses for Sieve redirects (it@wenn.com, Request
      #11457).

