@@ -2,6 +2,7 @@
 v3.2.0-git
 ----------
 
+[mms] Sorting of rules now done via drag/drop javascript.
 [jan] Make shares table compatible with Oracle.
 [mms] Validate e-mail addresses on the forward and vacation pages (Request
       #7249).
